--- a/plugins/MMOItems/item/staff.yml
+++ b/plugins/MMOItems/item/staff.yml
@@ -87,6 +87,8 @@ CRYSTAL_WAND:
         damage: 12.0
         cooldown: 7.0
     armor: -0.3
+    required-class:
+    - マジシャン
 ROARING_SEA_WAND:
   base:
     material: DIAMOND_HOE
@@ -108,7 +110,6 @@ ROARING_SEA_WAND:
     attack-damage: 19.0
     attack-speed: 1.2
     range: 14.0
-    mana-cost: 2.5
     required-level: 20.0
     skill-damage: 5.0
     magic-damage: 8.0
@@ -118,7 +119,7 @@ ROARING_SEA_WAND:
       water:
         damage: 30.0
     mana-regeneration: 0.3
-    max-mana: 45.0
+    max-mana: 100.0
     armor: -0.3
     disable-enchanting: true
     disable-repairing: true
@@ -128,3 +129,6 @@ ROARING_SEA_WAND:
     lore:
     - '&f海の力を宿した杖'
     - '&f自分を中心に相手の行動を低下させる'
+    required-class:
+    - マジシャン
+    mana-cost: 2.5
