--- a/plugins/MMOItems/item/sword.yml
+++ b/plugins/MMOItems/item/sword.yml
@@ -94,6 +94,11 @@ TEXTURESWORD1:
   base:
     material: DIAMOND_SWORD
     custom-model-data: 2.0
+    ability:
+      ability1:
+        type: STUN
+        mode: LEFT_CLICK
+        cooldown: 0.0
 SIRIUSUSWORD:
   base:
     material: IRON_SWORD
@@ -505,3 +510,76 @@ ABYSS_SWORD:
     enchants:
       sharpness: 5.0
     hide-enchants: true
+KNIGHT'S_SWORD:
+  base:
+    material: DIAMOND_SWORD
+    custom-model-data: 1.0000002E7
+    name: '&9騎士の直剣'
+    required-level: 20.0
+    attack-damage: 20.0
+    weapon-damage: 4.5
+    physical-damage: 5.0
+    unbreakable: true
+    tier: RARE
+    max-health: 80.0
+    health-regeneration: 0.3
+    skill-damage: 2.0
+    ability:
+      ability1:
+        type: LIGHT_DASH
+        mode: SHIFT_LEFT_CLICK
+        damage: 22.0
+        length: 1.5
+        cooldown: 6.0
+        stamina: 6.0
+      ability2:
+        type: SHOCKWAVE
+        mode: SHIFT_RIGHT_CLICK
+        stamina: 4.0
+        cooldown: 6.0
+        length: 12.0
+        knock-up: 3.0
+    required-class:
+    - ブレイダー
+    gem-sockets:
+    - '1'
+    - '1'
+    - RED
+LIGHTNING_SWORD:
+  base:
+    material: DIAMOND_SWORD
+    custom-model-data: 1.0000002E7
+    name: '&9ライトニングソード'
+    required-level: 30.0
+    required-class:
+    - ブレイダー
+    attack-damage: 28.0
+    weapon-damage: 6.0
+    physical-damage: 7.0
+    tier: RARE
+    max-health: 100.0
+    enchants:
+      channeling: 1.0
+    gem-sockets:
+    - '1'
+    - '1'
+    - RED
+    element:
+      thunder:
+        damage: 40.0
+    health-regeneration: 0.3
+    unbreakable: true
+    ability:
+      ability1:
+        type: LIGHTNING_BEAM
+        mode: SHIFT_LEFT_CLICK
+        damage: 30.0
+        stamina: 12.0
+        cooldown: 10.0
+        radius: 6.0
+      ability2:
+        type: SMITE
+        mode: SHIFT_RIGHT_CLICK
+        damage: 28.0
+        cooldown: 6.0
+        stamina: 5.0
