--- a/plugins/MMOItems/item/long_sword.yml
+++ b/plugins/MMOItems/item/long_sword.yml
@@ -46,3 +46,45 @@ VAJRA_LONGSWORD:
     - '1'
     - '1'
     - RED
+PYROXENE_LONGSWORD:
+  base:
+    material: DIAMOND_SWORD
+    name: '&9パイロキシンソード'
+    custom-model-data: 1.0000004E7
+    unbreakable: true
+    tier: RARE
+    required-level: 40.0
+    required-class:
+    - ブレイダー
+    attack-damage: 37.0
+    attack-speed: 1.4
+    weapon-damage: 8.0
+    physical-damage: 8.0
+    block-power: 20.0
+    block-rating: 15.0
+    health-regeneration: 0.3
+    ability:
+      ability1:
+        type: EARTHQUAKE
+        mode: SHIFT_LEFT_CLICK
+        duration: 4.0
+        cooldown: 10.0
+        stamina: 12.0
+        damage: 40.0
+      ability2:
+        type: HEAVY_CHARGE
+        mode: SHIFT_RIGHT_CLICK
+        damage: 38.0
+        stamina: 8.0
+        cooldown: 10.0
+        knockback: 2.0
+    knockback-resistance: 0.1
+    gem-sockets:
+    - '1'
+    - '1'
+    - RED
+    lore:
+    - '&f輝石を使い、作られた剣'
+    - '&f地面に刺し、地震を起こすことができる。'
+    max-health: 400.0
+    stamina-cost: 10.0
